Header fixed size; btn-login, btn-order fix text align;

--- a/03 Responsive/homework/YuBil/02/css/desktop.css
+++ b/03 Responsive/homework/YuBil/02/css/desktop.css
@@ -47,23 +47,9 @@ a,
     outline: none;
 }
 
-.nav-menu { display: inline-block; }
-
-.nav-menu li { 
-    display: inline-block;
-    font-family: 'MyriadProCondRegular', Arial, sans-serif;
-    font-size: 16px;
-    color: #0f5ee0;    
-    text-transform: uppercase;
-    letter-spacing: 4px;
-    margin-right: 38px;
-}
-
-li a:hover { color: #ff7200; }
-
 header { 
-    margin-top: 77px;
-    text-align: center;
+    width: 1200px;
+    margin: 75px auto 0px auto;
 }
 
 .img-share  { 
@@ -74,7 +60,7 @@ header {
     background-position: 0 -40px;
     content: "";
 
-    margin-right: 45px;
+    margin-left: 44px;
 }
 
 .img-share:hover { 
@@ -92,7 +78,7 @@ img {
 .img-logo {
     width: 100px;
     height: 24px;
-    margin-right: 60px;
+    margin-left: 46px;
 }
 
 .img-lang {
@@ -100,6 +86,24 @@ img {
     height: 15px;
     margin-left: 7px;
 }
+
+.nav-menu { 
+    display: inline-block; 
+    margin-left: 60px;
+}
+
+.nav-menu li { 
+    display: inline-block;
+    font-family: 'MyriadProCondRegular', Arial, sans-serif;
+    font-size: 16px;
+    color: #0f5ee0;    
+    text-transform: uppercase;
+    letter-spacing: 4px;
+    
+    margin-right: 38px;
+}
+
+li a:hover { color: #ff7200; }
 
 main { 
     background: url("../img/bg-white.jpg") -312px -157px;
@@ -264,15 +268,17 @@ button {
 }
 
 .btn-menu-login { 
+    padding: 8px 29px 8px 30px;
+    margin-left: -1px;
+    
     background: #ff7200;
-    padding: 7px 29px;
-    margin-left: 1px;
 }
 
 .btn-menu-order {
-    background: #27d481;
-    padding: 7px 16px;
-    margin-left: -15px;
+    padding: 8px 14px 8px 18px;
+    margin-left: -18px;
+    
+    background: #27d481; 
 }
 /* END Buttons */
     
